--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "gh-pages": "^2.0.1",
+    "lodash.throttle": "^4.1.1",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
