--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
+    "react-scroll": "^1.7.16",
+    "react-tooltip": "^4.2.7",
     "styled-components": "^4.2.0"
   },
   "scripts": {
