--- a/package.json
+++ b/package.json
@@ -47,5 +47,5 @@
     "lint-staged": "^8.1.5",
     "prettier": "^1.17.0"
   },
-  "homepage": "https://github.com/Artem2313/basic/"
+  "homepage": "https://github.com/Artem2313/abzTest/"
 }
